2010-08-15  Piotr Fusik  <fox@scene.pl>
* java/asap2wav.MF, java/asap_midlet.MF: added "Manifest-Version"


2010-07-11  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs: double-clicking "Play" in Opera could start two songs
  playing simultaneously (reported by Slaves)


2010-07-05  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs, csharp/AppManifest.xaml, csharp/ASAP.ppcs,
  csharp/Makefile, anylang.h, README, PORTS.xml: Silverlight player


2010-07-03  Piotr Fusik  <fox@scene.pl>
* flash/Makefile, flash/ASAP.ppas, flash/ASAP_ModuleInfo.as:
  documentation comments


2010-05-25  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc, win32/info_dlg.c, win32/info_dlg.h, win32/settings_dlg.c,
  win32/winamp/in_asap.c, win32/xmplay/xmp-asap.c: 
  added "Show information about the currently playing file" in XMPlay

* win32/info_dlg.c, win32/dshow/asap_dsf.cpp: open files non-exclusively


2010-05-24  Piotr Fusik  <fox@scene.pl>
* win32/info_dlg.c, win32/winamp/in_asap.c: 
  "Show information about the currently playing file" is now honored
  when opening the information box


** 2.1.1 released on 2010-05-05

2010-05-05  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp: made compilable with MSVC

* win32/shellex/ASAPShellEx.propdesc: made Subsongs unsigned


2010-05-03  Piotr Fusik  <fox@scene.pl>
* asap.c: PAL/NTSC flag in GTIA didn't work


2010-04-28  Piotr Fusik  <fox@scene.pl>
* PORTS.xml, PORTS.xsl: multi-file operations

* win32/shellex/ASAPShellEx.cpp: if the extension had been added via setup's "Change"
  it didn't work until Explorer's restart (Windows 7)

* win32/shellex/ASAPShellEx.cpp: split authors


2010-04-27  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp, asap.c, PORTS.xml:
  edit AUTHOR, NAME, DATE with Windows Vista and 7


2010-04-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: set KindMap to "music" for Windows 7 Content View

* win32/setup/asap.wxs: display properties provided by Vista/7 shell extension
  